modification index.html, index.css

--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
+        <meta charset="utf-8">
         <title>Leafy</title>
+        <link rel="stylesheet"  type = "text/css" href="./index.css">
     </head>
     <body>
-        <p>Hello world !</p>
+        <header>
+            <h1>Bienvenue sur Leafy !</h1>
+        </header>
+        <div id="barreAvancement"></div>
+        <main id="grilleJeux">
+            <div id="memory">memory</div>
+            <div id="pendu">pendu</div>
+            <div id="jeuPoisson">poisson</div>
+            <div id="cliquerNettoyer">cliquerNettoyer</div>
+        </main>
+        <img id="Leafy" src="./Images/feuille.jpg">
     </body>
 </html>
