--- a/jeupoisson/index.html
+++ b/jeupoisson/index.html
@@ -7,6 +7,14 @@
     <title>Le chieng il mange le poissong</title>
 </head>
 <body>
+    <div id="modal">
+        <div class="modal-inner">
+            <h2>Victoire!</h2>
+            <p> Bravo, tu as sauvé le petit poisson rouge des déchets!
+                stop la pollution.
+            </p>
+        </div>
+    </div>
     <div id="ocean">
         <div id="poisson" style="left: 0px; top: 0px;"></div>
     </div>
