feat: Modification regarding the index page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
             <div id="jeuPoisson">poisson</div>
             <div id="cliquerNettoyer">cliquerNettoyer</div>
         </main>
-        <img id="Leafy" src="./Images/feuille.jpg">
+        <img id="Leafy" src="./Images/leafy.PNG">
+        <div>
+            <div id="texteLeafy">Bonjouer et bienvenue ! Clique sur une des images pour jouer
+            </div>
+        </div>
+        <script src="./index.js" defer></script>
     </body>
 </html>
