--- a/jeupoisson/index.html
+++ b/jeupoisson/index.html
@@ -22,7 +22,9 @@
         </div>
     </div>
     <div id="ocean">
-        <div id="poisson" style="left: 0px; top: 0px;"></div>
+        <div id="poisson" style="left: 0px; top: 0px;">
+            <img height="50px" width="50px" src="poissong.png" alt="poissong">
+        </div>
     </div>
     <div id="soleil"></div>
     <div id="sol"></div>
