leafy.ico et hover

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Leafy</title>
         <link rel="stylesheet"  type = "text/css" href="./index.css">
+        <link rel="shortcut icon" href="./leafy.ico" type="image/x-icon">
     </head>
     <body>
         <header>
@@ -16,7 +17,7 @@
             <div id="jeuPoisson">poisson</div>
             <div id="cliquerNettoyer">cliquerNettoyer</div>
         </main>
-        <img id="Leafy" src="./Images/leafy.PNG">
+        <img id="Leafy" src="./leafy.PNG">
         <div>
             <div id="texteLeafy">Bonjouer et bienvenue ! Clique sur une des images pour jouer
             </div>
