ajout du fichier bg

--- a/jeupoisson/index.html
+++ b/jeupoisson/index.html
@@ -21,7 +21,7 @@
     <div id="modal-failure">
         <div class="modal-inner-failure">
             <h2>MORT SUBITE!</h2>
-            <p> trop de déchets.. :( )</p>
+            <p> trop de déchets.. :( </p>
         </div>
     </div>
     <div id="ocean">
