--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <title>Leafy</title>
         <link rel="stylesheet"  type = "text/css" href="./index.css">
         <link rel="shortcut icon" href="./leafy.ico" type="image/x-icon">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
