ajout des facts

--- a/jeuPoisson/index.html
+++ b/jeuPoisson/index.html
@@ -12,16 +12,17 @@
 <body>
     <div id="modal">
         <div class="modal-inner">
-            <h2>Victoire!</h2>
-            <p> Bravo, tu as sauvé le petit poisson rouge des déchets!
-                stop la pollution.
+            <h2>Victoire</h2>
+            <p> le poisson s'en est sorti pour cette fois, mais les déchets sont toujours dans l'océan. <br>
+                On estime aujourd'hui que la quantité de plastique dans les océans est comprise entre 75 à 199 millions de tonnes
             </p>
         </div>
     </div>
     <div id="modal-failure">
         <div class="modal-inner-failure">
-            <h2>MORT SUBITE!</h2>
-            <p> trop de déchets.. :( </p>
+            <h2>Défaite</h2>
+            <p> le poisson est mort à cause des déchets polluants des humains. <br>
+                On estime aujourd'hui que la quantité de plastique dans les océans est comprise entre 75 à 199 millions de tonnes </p>
         </div>
     </div>
     <div id="ocean">
