--- a/index.html
+++ b/index.html
@@ -11,19 +11,28 @@
     </head>
     <body>
         <header>
-            <h1>Bienvenue sur Leafy !</h1>
+            <h1>Bienvenue sur Leafy, le site de mini-jeux ludiques sur l'écologie !</h1>
         </header>
         <div id="barreAvancement"></div>
         <main id="grilleJeux">
-            <div id="memory">memory</div>
-            <div id="pendu">pendu</div>
-            <div id="jeuPoisson">poisson</div>
-            <div id="cliquerNettoyer">cliquerNettoyer</div>
-        </main>
-        <img id="Leafy" src="./leafy.PNG">
-        <div>
-            <div id="texteLeafy">Bonjouer et bienvenue ! Clique sur une des images pour jouer
+            <div id="memory" class="gameDiv">
+                <h4>Memory</h4>
+                <img src="card.png" alt="Memory card icon" class="gameIcon" />
             </div>
+            <div id="pendu" class="gameDiv">
+                <h4>Pendu</h4>
+            </div>
+            <div id="jeuPoisson" class="gameDiv">
+                <h4>Le jeu du poisson</h4>
+                <img src="./poissong.gif" alt="Poisson" class="gameIcon" />
+            </div>
+            <div id="cliquerNettoyer" class="gameDiv">
+                <h4>Le Cliquer/Nettoyer</h4>
+                <img src="./broom.png" alt="Balai" class="gameIcon" />
+            </div>
+        </main>
+        <img id="Leafy" src="./leafy.PNG" alt="Leafy, the nice character guiding you !">
+        <div id="texteLeafy">Bonjour et bienvenue ! Clique sur une des images pour jouer !
         </div>
         <script src="./index.js" defer></script>
     </body>
