better style for main page

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             </div>
             <div id="pendu" class="gameDiv">
                 <h4>Pendu</h4>
+                <img src="tree.png" alt="Tree icon" class="gameIcon" />
             </div>
             <div id="jeuPoisson" class="gameDiv">
                 <h4>Le jeu du poisson</h4>
