--- a/jeuNettoyer/index.html
+++ b/jeuNettoyer/index.html
@@ -13,17 +13,13 @@
 
     <div class="game-container" id="gameContainer">
         <div class="infos" id="info1">
-            <p> <h3>Info1 écolo du jour</h3>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec iaculis tortor a metus posuere posuere. In molestie pellentesque pellentesque. Ut urna urna, aliquam sodales lacus quis, suscipit dictum mauris. Sed cursus varius facilisis. Aliquam erat volutpat. Duis quis dapibus sapien. Phasellus non nisl felis. Donec congue tellus consectetur sodales auctor. Suspendisse ut quam eu mauris elementum congue. </p>
+            <p> <h3>Victoire</h3>
+            Vous avez nettoyé le paysage! Leafy est fière de vous<br>
+         Sachez que en France en 2020, 310 millions de tonnes de déchets ont été produites :( <br>
+        Afin de préserver notre planette nous 
+        devons tous prendre des mesures responsables pour réduire notre empreinte écologique. Adopter des pratiques éco-responsables, comme le recyclage, la réduction de la consommation de plastique. </p>
         </div>
-        <div class="infos" id="info2">
-            <p> <h3>Info2 écolo du jour</h3>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec iaculis tortor a metus posuere posuere. In molestie pellentesque pellentesque. Ut urna urna, aliquam sodales lacus quis, suscipit dictum mauris. Sed cursus varius facilisis. Aliquam erat volutpat. Duis quis dapibus sapien. Phasellus non nisl felis. Donec congue tellus consectetur sodales auctor. Suspendisse ut quam eu mauris elementum congue. </p>
-        </div>
-        <div class="infos" id="info3">
-            <p> <h3>Info3 écolo du jour</h3>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec iaculis tortor a metus posuere posuere. In molestie pellentesque pellentesque. Ut urna urna, aliquam sodales lacus quis, suscipit dictum mauris. Sed cursus varius facilisis. Aliquam erat volutpat. Duis quis dapibus sapien. Phasellus non nisl felis. Donec congue tellus consectetur sodales auctor. Suspendisse ut quam eu mauris elementum congue. </p>
-        </div>
+        
     </div>
 
     <script src="clic.js"></script>
