--- a/jeuPendu/index.html
+++ b/jeuPendu/index.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
   <title>Pendu trop cool</title>
   <link rel="stylesheet" href="pendu.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
   <h1 id="pendu-titre">Jouons au pendu !</h1>
