--- a/jeuMemo/index.html
+++ b/jeuMemo/index.html
@@ -4,19 +4,21 @@
   <meta charset="utf-8">
   <title>Memory</title>
   <link rel="stylesheet" href="style.css">
-  <script src="script.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>Leafy</h1>
     <div class="memo">
-        <h2 id="memoTitle">The memory game</h1>
+        <h2 id="memoTitle">The memory game</h2>
         <div id="memo-start"> 
               <p class="startText">Dans ce mini jeu tu devras trouver toutes les paires.</p>
-              <p class="startText">En cliquant sur 2 cartes tu verras leur face caché.</p>
-              <p class="startText">Si elles ne sont pas identique, retiens les bien, elle seront remise face caché après quelque secondes.</p>
-              <p class="startText">Si elle sont identique elles resteront face visible et on t'en diras plus sur leur histoire.</p>
+              <p class="startText">En cliquant sur 2 cartes tu verras leur face cachée.</p>
+              <p class="startText">Si elles ne sont pas identiques, retiens les bien, elle seront remises face cachée après quelque secondes.</p>
+              <p class="startText">Si elle sont identiques, elles resteront face visible et on t'en dira plus sur leur histoire.</p>
               <p class="startText">Trouve toutes les paires!</p>
-              <p class="startText">Tu remporte la partie en trouvant toutes les paires en moins de 10 essaie.</p>
+              <p class="startText">Tu remportes la partie en trouvant toutes les paires en moins de 10 essais.</p>
               <div id="boutonPlay">
                 <button class="buttonMemo">Play</button>
               </div>
@@ -50,5 +52,7 @@
         </div>
         <img class="memoimg" id="memoEx" src="./image-memo/card.png">
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
