--- a/jeuNettoyer/index.html
+++ b/jeuNettoyer/index.html
@@ -18,6 +18,7 @@
          Sachez que en France en 2020, 310 millions de tonnes de déchets ont été produites :( <br>
         Afin de préserver notre planette nous 
         devons tous prendre des mesures responsables pour réduire notre empreinte écologique. Adopter des pratiques éco-responsables, comme le recyclage, la réduction de la consommation de plastique. </p>
+         <button id="homepage" onclick="window.location.href='../index.html'">Homepage</button>
         </div>
         
     </div>
