--- a/jeuMemo/index.html
+++ b/jeuMemo/index.html
@@ -9,50 +9,53 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Leafy</h1>
-    <div class="memo">
-        <h2 id="memoTitle">The memory game</h2>
-        <div id="memo-start"> 
-              <p class="startText">Dans ce mini jeu tu devras trouver toutes les paires.</p>
-              <p class="startText">En cliquant sur 2 cartes tu verras leur face cachée.</p>
-              <p class="startText">Si elles ne sont pas identiques, retiens les bien, elle seront remises face cachée après quelque secondes.</p>
-              <p class="startText">Si elle sont identiques, elles resteront face visible et on t'en dira plus sur leur histoire.</p>
-              <p class="startText">Trouve toutes les paires!</p>
-              <p class="startText">Tu remportes la partie en trouvant toutes les paires en moins de 10 essais.</p>
-              <div id="boutonPlay">
-                <button class="buttonMemo">Play</button>
-              </div>
-        </div>
-        <div id = "memo-play">
-            <div id="reset">
-                <button id="resetbtn">Reset</button>
-            </div>
-            <div id="memo-right">
-                <img class="memoimg" id="memo0" src="./image-memo/card.png">
-                <img class="memoimg" id="memo1" src="./image-memo/card.png">
-                <img class="memoimg" id="memo2" src="./image-memo/card.png">
-                <img class="memoimg" id="memo3" src="./image-memo/card.png">
-                <img class="memoimg" id="memo4" src="./image-memo/card.png">
-                <img class="memoimg" id="memo5" src="./image-memo/card.png">
-                <img class="memoimg" id="memo6" src="./image-memo/card.png">
-                <img class="memoimg" id="memo7" src="./image-memo/card.png">
-                <img class="memoimg" id="memo8" src="./image-memo/card.png">
-                <img class="memoimg" id="memo9" src="./image-memo/card.png">
-            </div>
-            <p id="triesMemo">Il vous reste 6 essaies</p>
-        </div>
-        <div class="modal-wrapper" id="soleil">
-            <div class="modal">
-                <div class="modal-close">X</div>
-                <div class="modal-content">
-                    <h2 id="titre-shop">Fun fact</h2>
-                    <p>blabliblablou</p>
+    <div id="main">
+        <h1>Leafy</h1>
+        <div class="memo">
+            <h2 id="memoTitle">The memory game</h2>
+            <div id="memo-start">
+                <p class="startText">Dans ce mini jeu tu devras trouver toutes les paires.</p>
+                <p class="startText">En cliquant sur 2 cartes tu verras leur face cachée.</p>
+                <p class="startText">Si elles ne sont pas identiques, retiens les bien, elle seront remises face cachée après quelque secondes.</p>
+                <p class="startText">Si elle sont identiques, elles resteront face visible et on t'en dira plus sur leur histoire.</p>
+                <p class="startText">Trouve toutes les paires!</p>
+                <p class="startText">Tu remportes la partie en trouvant toutes les paires en moins de 10 essais.</p>
+                <div id="boutonPlay">
+                    <button class="buttonMemo">Jouer</button>
                 </div>
             </div>
+            <div id = "memo-play">
+                <div id="reset">
+                    <button id="resetbtn">Reset</button>
+                </div>
+                <div id="memo-right">
+                    <img class="memoimg" id="memo0" src="./image-memo/card.png">
+                    <img class="memoimg" id="memo1" src="./image-memo/card.png">
+                    <img class="memoimg" id="memo2" src="./image-memo/card.png">
+                    <img class="memoimg" id="memo3" src="./image-memo/card.png">
+                    <img class="memoimg" id="memo4" src="./image-memo/card.png">
+                    <img class="memoimg" id="memo5" src="./image-memo/card.png">
+                    <img class="memoimg" id="memo6" src="./image-memo/card.png">
+                    <img class="memoimg" id="memo7" src="./image-memo/card.png">
+                    <img class="memoimg" id="memo8" src="./image-memo/card.png">
+                    <img class="memoimg" id="memo9" src="./image-memo/card.png">
+                </div>
+                <p id="triesMemo">Il vous reste 6 essais !</p>
+            </div>
+            <div class="modal-wrapper" id="soleil">
+                <div class="modal">
+                    <div class="modal-close">X</div>
+                    <div class="modal-content">
+                        <h2 id="titre-shop">Fun fact</h2>
+                        <p>blabliblablou</p>
+                    </div>
+                </div>
+            </div>
+            <img class="memoimg" id="memoEx" src="./image-memo/card.png">
         </div>
-        <img class="memoimg" id="memoEx" src="./image-memo/card.png">
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
