Added ending picture for jeu du poisson

--- a/jeuPoisson/index.html
+++ b/jeuPoisson/index.html
@@ -29,6 +29,7 @@
         <div id="poisson" style="left: 0px; top: 0px;">
         </div>
     </div>
+    <div id="arrivalLine"></div>
     <div id="sol"></div>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="utilitaries.js"></script>
