--- a/jeuPendu/index.html
+++ b/jeuPendu/index.html
@@ -53,7 +53,7 @@
     </div>
   <div id="modal-gagner" class="modal">
     <div class="modal-content">
-      <p class="text-modal">C'est gagné</p>
+      <p class="text-modal">C'est gagné !</p>
       <button class="rejouer">Rejouer</button>
     </div>
   
