--- a/index.html
+++ b/index.html
@@ -12,25 +12,29 @@
     <body>
         <header>
             <h1>Bienvenue sur Leafy, le site de mini-jeux ludiques sur l'écologie !</h1>
+            <p>Participation à la Nuit de l'Info 2023 - Groupe "PeipuTres" </p>
         </header>
         <div id="barreAvancement"></div>
         <main id="grilleJeux">
             <div id="memory" class="gameDiv">
                 <h4>Memory</h4>
                 <img src="card.png" alt="Memory card icon" id="carte" class="gameIcon" />
+                <div class="openingHoverDiv"></div>
             </div>
             <div id="pendu" class="gameDiv">
                 <h4>Pendu</h4>
                 <img src="tree.png" alt="Tree icon" id="arbre" class="gameIcon" />
+                <div class="openingHoverDiv"></div>
             </div>
             <div id="jeuPoisson" class="gameDiv">
                 <h4>Le jeu du poisson</h4>
                 <img src="./poissong.gif" alt="Poisson" id="poisson" class="gameIcon" />
+                <div class="openingHoverDiv"></div>
             </div>
-            <div id="cliquerNettoyer" class="gameDiv">
+            <!-- <div id="cliquerNettoyer" class="gameDiv">
                 <h4>Le Cliquer/Nettoyer</h4>
                 <img src="./broom.png" alt="Balai" id="balai" class="gameIcon" />
-            </div>
+            </div> !-->
         </main>
         <img id="Leafy" src="./leafy.PNG" alt="Leafy, the nice character guiding you !">
         <div id="texteLeafy">Bonjour et bienvenue ! Clique sur une des images pour jouer !
