--- a/jeuMemo/index.html
+++ b/jeuMemo/index.html
@@ -56,7 +56,7 @@
     </div>
     <div id="modal-info">
         <div class="modal-inner-info">
-            <h2>Info-clima</h2>
+            <h2>Info-climat</h2>
             <p> 
             Entre 2002 et 2019, la fonte des glaces de l'Antarctique a contribué à une perte annuelle moyenne de près de 148 milliards de tonnes, 
             tandis que le Groenland a perdu environ 280 milliards de tonnes par an. Cette fonte accrue contribue à la présence croissante d'icebergs dans les océans, soulignant l'impact du changement climatique.
